fixed transaction manager issue and journal API